# clio

./: .envrc  .gitignore  .shellcheckrc  Justfile  Makefile  Makesurefile  README.md  Runfile  bootstrap.sh  concept_finder.cpp  concept_finder_v2.py  env.yaml  flake.nix  generate-window.nim  generate-window.txt  model.py  patch.sh  plot.ipynb  pyproject.toml  r  run  ruptures.ipynb  spark_count.py  spark_filter.py  util.sh
Z_OLD_FILES/: split.py  t.py  u.py  v.py
bash/: a.sh  b.sh
clio/characteristics/: clustering.py
clio/flashnet/: aggregate.py  confidence.py  constants.py  entropy.py  eval.py  genetic_choose_window.py  ip_finder.py  normalization.py  tf_training.py  training.py  uncertainty.py
clio/flashnet/cli/: _shared.py  active_learner.py  characteristic.py  impact.py  model_reuse_count.py  preprocessing.py  student.py  workload_prediction.py
clio/flashnet/cli/analysis/: default.py  train_size.py
clio/flashnet/exp/: impact.py  workload_prediction.py  workload_prediction_analyze.py
clio/flashnet/preprocessing/: add_filter.py  feature_engineering.py  labeling.py  labeling_old.py
clio/flashnet/replayer/: atomic.h  replay.sh  replayer.c
clio/flashnet/training/: ensemble.py  keras.py  shared.py  simple.py  skorch.py  student.py
clio/layers/: initialization.py  normalizer.py
clio/preprocess/: msr.py
clio/trace/: analyzer.py  pdfs.py  plotter.py  standardizer.py
clio/utils/: characteristic.py  cpu_usage.py  csv.py  dataframe.py  general.py  indented_file.py  keras.py  logging.py  metric.py  msft.py  path.py  query.py  stats.py  timer.py  tqdm.py  trace.py  trace_pd.py  typer.py
docs/: trace-editor.md
drift-detection/: drifts_detection.py  jensen-shannon.py  kl-divergence.py
drift-detection/config/: config.yaml
drift-detection/dataset-construction/: Cramér-von Mises_movingRef.ipynb  Kolmogorov-Smirnov_movingRef.ipynb  Least-Squares Density Difference_movingRef.ipynb  Maximum-Mean-Discrepancy_movingRef.ipynb  visualize-drift-datasets.ipynb
drift-detection/dataset-construction/preprocessing/: fast-fourier-transform.ipynb
drift-detection/online-drift-detection/: Jensen-Shannon Distance.ipynb  Jensen-Shannon Distance_winlen_120.ipynb  MMD.ipynb
drift-detection/visualization/: Cramér-von Mises.ipynb  Cramér-von Mises_movingRef.ipynb  Kolmogorov-Smirnov.ipynb  Kolmogorov-Smirnov_movingRef.ipynb
linnos/: feat.py  labeling.py  model.py
nix/: micromamba.nix
nix-utils/: alibaba_device_char.sh  alibaba_device_counts.csv  alibaba_device_rw-device_counts.csv  alibaba_pipeline_splitter.py  alibaba_splitter.py  nix-scratch.md
patches/: snakemake_io.py  snakemake_storage_plugin_sftp_init.py
plot/: cdf.plot  line.plot
raw-data/: .gitignore
runfiles/: analysis.run  preprocess.run  replay.run  utils.run
runfiles/experiments/: initial-only.run
runfiles/weekly-report/: 24-05-08.run  24_MAY_W2.run  24_MAY_W3.run
s/: femu.sh  linnos.sh  pipeline.sh  processing.sh  train.sh
s/raw/: alibaba.sh  tectonic.sh  tencent.sh
snakemake_storage_plugin_fabric/: __init__.py
system-info/: .gitignore  collect_specs.sh  get_system_info.sh  ssd_speed.sh
system-info/specs_collection/: ray-stor.p3-ssd-009.specs.2024_May_17.txt  rayst.txt
system_info/: collect_specs.sh  get_system_info.sh
trace-utils/: .gitignore  CMakeLists.txt  Cargo.toml  README.md
trace-utils-rs/: Cargo.toml  tencent_volumes.csv
trace-utils-rs/crates/tencent/: Cargo.toml
trace-utils-rs/crates/utils/: Cargo.toml
trace-utils-rs/crates/utils/src/: dpi.rs  file.rs  image.rs  lib.rs  msft.rs  path.rs  serde.rs  trace_reader.rs
trace-utils/app/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  stacktrace.cpp
trace-utils/app/alibaba/: alibaba.cpp  alibaba.hpp  split.cpp  split.hpp
trace-utils/app/stats/: calculate-raw-trace.cpp  calculate-raw-trace.hpp  calculate-replayed-trace.cpp  calculate-replayed-trace.hpp  calculate.cpp  calculate.hpp  plot-char-app.cpp  plot-char-app.hpp  stats.cpp  stats.hpp
trace-utils/app/tectonic/: split.cpp  split.hpp  tectonic.cpp  tectonic.hpp
trace-utils/app/tencent/: count-volume-map.cpp  count-volume-map.hpp  count-volume-reduce.cpp  count-volume-reduce.hpp  count-volume.cpp  count-volume.hpp  pick-device.cpp  pick-device.hpp  pick-volume.cpp  pick-volume.hpp  split.cpp  split.hpp  tencent.cpp  tencent.hpp
trace-utils/app/trace-finder/: trace-finder-v1.cpp  trace-finder-v1.hpp  trace-finder.cpp  trace-finder.hpp
trace-utils/cmake/: Arrow.cmake  cleanup.cmake
trace-utils/cmake/7zip/: CMakeLists.txt
trace-utils/crates/characteristic/: Cargo.toml
trace-utils/crates/characteristic/src/: characteristic.rs  lib.rs  msft_characteristic.rs
trace-utils/crates/tencent/: Cargo.toml
trace-utils/crates/tencent/src/: lib.rs
trace-utils/crates/trace-utils/src/: path.rs
trace-utils/crates/utils/: Cargo.toml
trace-utils/crates/utils/src/: cdf.rs  dpi.rs  file.rs  lib.rs  msft.rs  path.rs  pbar.rs  stats.rs
trace-utils/include/trace-utils/: characteristic.hpp  exception.hpp  logger.hpp  stats.hpp  trace.hpp  utils.hpp
trace-utils/include/trace-utils/internal/: allocation.hpp  filesystem.hpp
trace-utils/include/trace-utils/trace/: alibaba.hpp  msft.hpp  replayed.hpp  replayer.hpp  tectonic.hpp  tencent.hpp
trace-utils/plot/: cdf.plot  line.plot  line_duration.plot
trace-utils/scripts/tencent/: filter_device.sh  get_device.sh
trace-utils/src/: CMakeLists.txt  characteristic.cpp  config.hpp.in  csv.hpp  logger.cpp  stats.cpp  trace-utils-config.cmake.in  trace-utils.pc.in  utils.cpp  utils.hpp
trace-utils/src/trace/: alibaba.cpp  msft.cpp  replayed.cpp  replayer.cpp  tectonic.cpp  tencent.cpp
trace_acer/: .gitignore  Cargo.toml  README.md
trace_acer/crates/tencent/: Cargo.toml
trace_acer/crates/tencent/src/: lib.rs
trace_acer/crates/trace-utils/: Cargo.toml
trace_acer/crates/trace-utils/src/: lib.rs
trace_acer/scripts/tencent/: filter_device.sh  get_device.sh
utils/: cdf.awk  colors.plot  parse-times.awk
workflow/: Snakefile  helper.py
workflow/rules/: baleen.smk  flashnet.smk  msrc.smk
wr-exp/: 24-05-08.run
(+48 files in other folders)
