[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
csv = "1.3.0"
# flate2 = "1.0.30"
flate2 = { version = "1.0.30", features = ["zlib-ng"], default-features = false }
globset = "0.4.14"
natord = "1.0.9"
serde = { version = "1.0.202", features = ["derive"] }
tar = "0.4.40"
globwalk = "0.9.1"
clap = { version = "4.5.4", features = ["derive"] }
rand = { version="0.8.5" }
duration-str = "0.10.0"
rayon = "1.10"
dashmap = "5.5.3"