[package]
name = "clio_utils"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
csv = { workspace = true }
num = { workspace = true }
hashbrown = { workspace = true }
ordered-float = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
average = { workspace = true }
indicatif = { workspace = true }
enterpolation = { workspace = true }
num-traits = { workspace = true }