[package]
name = "clio_characteristic"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
ordered-float = { workspace = true }
flate2 = { workspace = true }
natord = { workspace = true }
tar = { workspace = true }
globwalk = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
duration-str = { workspace = true }
rayon = { workspace = true }
dashmap = { workspace = true }
clio_utils = { path = "../utils", version = "*" }

[[bin]]
name = "calc_characteristic"
path = "bin/calc_characteristic.rs"