[package]
name = "clio_characteristic"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
ordered-float = { workspace = true }
flate2 = { workspace = true }
natord = { workspace = true }
tar = { workspace = true }
globwalk = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
dashmap = { workspace = true }
fundu = { workspace = true }
indicatif = { workspace = true }
gnuplot = { workspace = true }
polars = { version = "0.40.0", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime", "cum_agg", "interpolate", "rank" ] }
clio_utils = { path = "../utils", version = "*" }

[[bin]]
name = "calc_characteristic"
path = "bin/calc_characteristic.rs"

[[bin]]
name = "plot_characteristic"
path = "bin/plot_characteristic.rs"