[package]
name = "clio_tencent"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = { workspace = true }
# flate2 = "1.0.30"
flate2 = { workspace = true }
natord = { workspace = true }
serde = { workspace = true }
tar = { workspace = true }
globwalk = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
duration-str = { workspace = true }
rayon = { workspace = true }
dashmap = { workspace = true }
clio_utils = { path = "../utils", version = "*" }

[[bin]]
name = "tencent_find_device"
path = "bin/find_device.rs"

[[bin]]
name = "tencent_device_joiner"
path = "bin/device_joiner.rs"

[[bin]]
name = "tencent_pick_device"
path = "bin/pick_device.rs"

[[bin]]
name = "tencent_split_window"
path = "bin/split_window.rs"
