[package]
name = "tencent"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
# flate2 = "1.0.30"
flate2 = { version = "1.0.30", features = ["zlib-ng"], default-features = false }
glob = "0.3.1"
natord = "1.0.9"
serde = { version = "1.0.202", features = ["derive"] }
trace-utils = { path = "../trace-utils", version = "*" }

[[bin]]
name = "tencent_find_device"
path = "bin/find_device.rs"

[[bin]]
name = "tencent_device_joiner"
path = "bin/device_joiner.rs"

[[bin]]
name = "tencent_filter_device"
path = "bin/filter_device.rs"
